minor visual tweaks for iPhone

--- a/DailyReports/css/app.css
+++ b/DailyReports/css/app.css
@@ -125,3 +125,4 @@ a.btn {background:#ccc}
  .row { margin-top:6px; padding-left:10px}
  .table-title {color:#999}
  .icon-ok {color:#34B233}
+ .icon-angle-right.icon-2x {padding-right:6px}
